; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/liquidio/extr_lio_main.c_lio_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/liquidio/extr_lio_main.c_lio_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.lio = type { i32, %struct.TYPE_6__, i64, %struct.octeon_device* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.octeon_device = type { i32 }

@LIO_IFSTATE_RUNNING = common dso_local global i32 0, align 4
@LINK_STATE_DOWN = common dso_local global i32 0, align 4
@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Interface is stopped\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lio_stop(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.lio*, align 8
  %4 = alloca %struct.octeon_device*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %5 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %6 = call %struct.lio* @if_getsoftc(%struct.ifnet* %5)
  store %struct.lio* %6, %struct.lio** %3, align 8
  %7 = load %struct.lio*, %struct.lio** %3, align 8
  %8 = getelementptr inbounds %struct.lio, %struct.lio* %7, i32 0, i32 3
  %9 = load %struct.octeon_device*, %struct.octeon_device** %8, align 8
  store %struct.octeon_device* %9, %struct.octeon_device** %4, align 8
  %10 = load %struct.lio*, %struct.lio** %3, align 8
  %11 = load i32, i32* @LIO_IFSTATE_RUNNING, align 4
  %12 = call i32 @lio_ifstate_reset(%struct.lio* %10, i32 %11)
  %13 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %14 = load i32, i32* @LINK_STATE_DOWN, align 4
  %15 = call i32 @if_link_state_change(%struct.ifnet* %13, i32 %14)
  %16 = load %struct.lio*, %struct.lio** %3, align 8
  %17 = getelementptr inbounds %struct.lio, %struct.lio* %16, i32 0, i32 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.lio*, %struct.lio** %3, align 8
  %19 = getelementptr inbounds %struct.lio, %struct.lio* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  store i64 0, i64* %22, align 8
  %23 = load %struct.lio*, %struct.lio** %3, align 8
  %24 = getelementptr inbounds %struct.lio, %struct.lio* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 8
  %27 = load %struct.lio*, %struct.lio** %3, align 8
  %28 = call i32 @lio_send_rx_ctrl_cmd(%struct.lio* %27, i32 0)
  %29 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %30 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %31 = call i32 @if_setdrvflagbits(%struct.ifnet* %29, i32 0, i32 %30)
  %32 = load %struct.octeon_device*, %struct.octeon_device** %4, align 8
  %33 = call i32 @lio_dev_info(%struct.octeon_device* %32, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local %struct.lio* @if_getsoftc(%struct.ifnet*) #1

declare dso_local i32 @lio_ifstate_reset(%struct.lio*, i32) #1

declare dso_local i32 @if_link_state_change(%struct.ifnet*, i32) #1

declare dso_local i32 @lio_send_rx_ctrl_cmd(%struct.lio*, i32) #1

declare dso_local i32 @if_setdrvflagbits(%struct.ifnet*, i32, i32) #1

declare dso_local i32 @lio_dev_info(%struct.octeon_device*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
